# data-profiler

./: .gitignore  DEV_DataProfiler.spec  DEV_run_data_profiler.ipynb  DataProfiler.spec  README.md  app_main.py  pyproject.toml  test.py
data_profiler/: data_profiler.py  data_profiler_gui.py
data_profiler/database/: database_manager.py
data_profiler/database/helpers/: constants.py  functions.py
data_profiler/frames/: custom_widgets.py
data_profiler/helpers/: constants.py  data_directory.py  functions.py
data_profiler/helpers/constants/: app_constants.py  data_file_constants.py  plotly_theme.py
data_profiler/helpers/functions/: data_file_functions.py  functions.py
data_profiler/helpers/models/: DataFiles.py  GeneralModels.py  ProjectInfo.py  Responses.py  TransformOptions.py
data_profiler/models/: DataFiles.py  ProjectInfo.py  Responses.py  TransformOptions.py
data_profiler/services/: output_tables_service.py  transform_service.py
documentation/: DataProfiler Development.md  DataProfiler SOP.docx  DataProfiler SOP.md  Development.md  Documentation - Table of Contents.docx
resources/: apex-theme.json
resources/sql/DEV/delete/: delete_from_inventory_data.sql  delete_from_order_details.sql  delete_from_order_header.sql  delete_from_order_velocity_combinations.sql  delete_from_outbound_data_by_order.sql  delete_from_project_number_order_number.sql  delete_from_project_number_velocity.sql  delete_from_tables_by_project_number.sql  delete_from_velocity_by_month.sql
resources/sql/DEV/insert/: insert_into_inbound_details.sql  (+9 more)
test data sets/MDLZ Kent - no ib/: ItemMaster.csv  OrderHeader.csv
tests/: run_transform.py  test_data_profiler.py
(+79 files in other folders)
